# SyncMySSD

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  run.bat  settings.txt
src/: main.cpp
src/resources/: app.manifest  app.rc
src/sync/: file_scanner.cpp  file_scanner.h  sync_engine.cpp  sync_engine.h  sync_types.h
src/ui/: app_ui.cpp  app_ui.h  theme.cpp  theme.h
